--- a/src/style.css
+++ b/src/style.css
@@ -4,12 +4,49 @@ body {
 
 .card {
   background-color: white;
-  width: 40%;
+  width: 45%;
   margin: 100px auto 0 auto;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
 }
 
-#todo-list {
+.list-head,
+.list-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.08);
+}
+
+#inputList {
+  outline: none;
+  border: none;
+  font-size: 1rem;
+  font-style: italic;
+  opacity: 0.6;
+  width: 100%;
+}
+
+.inputEdit {
+  outline: none;
+  border: none;
+  font-size: 1rem;
+  font-style: italic;
+  opacity: 0.8;
+  width: 100%;
+  background-color: rgb(240, 218, 190);
+}
+
+.description {
+  padding: 0 10px;
+}
+
+.fa-level-down-alt {
+  transform: rotate(90deg);
+  font-size: 12px;
+}
+
+#main-list {
   color: black;
   list-style: none;
   padding: 0;
@@ -20,7 +57,32 @@ ul {
   margin: 0;
 }
 
-.list-item {
+.list-input {
+  display: flex;
+}
+
+input {
+  margin-right: 10px;
+}
+
+.clear-all {
+  background-color: #f1f2f5;
   padding: 15px;
-  border-bottom: 1px solid rgba(98, 57, 57, 0.07);
+  text-align: center;
+}
+
+.fas,
+.far,
+.clear-all a {
+  text-decoration: none;
+  color: black;
+  opacity: 0.4;
+}
+
+.fas:hover,
+.far:hover,
+.clear-all a:hover {
+  text-decoration: underline;
+  color: black;
+  opacity: 0.8;
 }
